--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>my first website</title>
 </head>
 <body>
-   <h1>amy is the best</h1> 
+   <h1><img src="https://th.bing.com/th/id/OIP.mVCdJL0DY_DV_aen4hBK0wHaE8?pid=ImgDet&rs=1" 
+     alt=""></h1> 
+     <p>&#128512</p>
+     <p>&#128509</p>
+     <a href="https://www.w3schools.com/html/html_links.asp">Visit W3Schools.com!</a>
+      <p style= background-color:violet;>amy</body> <p>&#9748;</p>
+     <h1 style="border:2px solid Violet";>amy</h1>
 </body>
 </html>
